--- a/Docker_Sql/Dockerfile
+++ b/Docker_Sql/Dockerfile
@@ -2,16 +2,17 @@
 FROM python:3.9
 
 #Install pandas by default when building the container
-RUN pip install pandas
+RUN apt-get install wget
+RUN pip install pandas sqlalchemy psycopg2 pyarrow
 
 #Specify the Working Directory when building and running the container image
 # Equivalant to $cd app
 WORKDIR /app
 
 #Copy the file pipeline.py from local to docker image at /app directory
-COPY pipeline.py pipeline.py
+COPY ingestion.py ingestion.py
 
 # ENTRYPOINT is like the environment or commands to run 
 # We can use bash or python
 # This like executing $python pipeline.py
-ENTRYPOINT ["python","pipeline.py"]
+ENTRYPOINT ["python","ingestion.py"]
