--- a/Docker_Sql/docker-compose.yaml
+++ b/Docker_Sql/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - ./ny_taxi_postgres_data:/var/lib/postgresql/data:rw
     ports:
       - "5432:5432"
+    hostname: 'pgdatabase'
   pgadmin:
     image: dpage/pgadmin4:latest
     environment:
