--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -64,7 +64,7 @@ x-airflow-common:
     GCP_GCS_BUCKET: 'dtc_data_lake_dtc-de-358219'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
-    - ./dags:/opt/airflow/dags
+    - ./dags_new:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     - ~/.google/credentials/:/.google/credentials:ro
