Homework [custom_dag] + Load dags from ./dags folder

--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -69,7 +69,7 @@ x-airflow-common:
     PG_DATABASE : "${PG_DATABASE}"
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
-    - ./dags_new:/opt/airflow/dags
+    - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     - ~/.google/credentials/:/.google/credentials:ro
